--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,10 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    /><link rel=" icon" href="/src/assets/iz.png" type="image/x-icon">  
-    <title>Izora's Portfolio</title>
+    />
+    <title>Lemuel's Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="icon" href="./iz.png">
 </head>
