--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-<link rel="icon" href="./NL logo.png">
+<link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+<link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
